--- a/public/locales/it/it.json
+++ b/public/locales/it/it.json
@@ -93,13 +93,13 @@
       {
         "img": "/serviziImg/label.png",
         "name": "Label & Packaging",
-        "descrizione": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ",
+        "descrizione": "Il label e il packaging design sono essenziali per il successo di un prodotto, in un mercato competitivo, sono cruciali per catturare l’interesse del pubblico e informare il consumatore.",
         "link": "/service/label"
       },
       {
         "img": "/serviziImg/social.png",
         "name": "Social Media Strategy",
-        "descrizione": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ",
+        "descrizione": "Risparmia tempo prezioso e ottieni risultati più consistenti affidando a me la tua presenza online. Seguo costantemente le nuove tendenze e genero contenuti efficaci e mirati che aumentano l'engagement del pubblico.",
         "link": "/service/social"
       },
       {
@@ -132,7 +132,9 @@
         "img": "/serviziImg/logodesign.png",
         "name": "Logo Design",
         "introTitle": "Progettiamo insieme il tuo Logo Personalizzato per la Tua nuova Attività",
-        "intro": "Se stai iniziando una nuova attività e ancora non hai un logo distintivo che rappresenti al meglio la tua azienda, sei nel posto giusto! Hai bisogno di un’immagine visiva su misura, in perfetta sintonia con la tua mission e adatta al tuo pubblico di riferimento?",
+        "intro": [
+          "Se stai iniziando una nuova attività e ancora non hai un logo distintivo che rappresenti al meglio la tua azienda, sei nel posto giusto! Hai bisogno di un’immagine visiva su misura, in perfetta sintonia con la tua mission e adatta al tuo pubblico di riferimento?"
+        ],
         "title": "/serviziImg/logo_Title.png",
         "titlePro": "Sono qui per te:",
         "descPro": "Progetteremo un logo unico per la tua azienda, che trasmetta chiaramente la tua attività e i prodotti/servizi che offri al tuo pubblico.",
@@ -215,10 +217,13 @@
         "img": "/serviziImg/branding.png",
         "name": "Branding Strategy",
         "title": "/serviziImg/branding_Title.png",
-        "introTitle": "Progettiamo insieme il tuo Logo Personalizzato per la Tua nuova Attività",
-        "intro": "Se stai iniziando una nuova attività e ancora non hai un logo distintivo che rappresenti al meglio la tua azienda, sei nel posto giusto! Hai bisogno di un’immagine visiva su misura, in perfetta sintonia con la tua mission e adatta al tuo pubblico di riferimento?",
-        "titlePro": "Sono qui per te:",
-        "descPro": "Progetteremo un logo unico per la tua azienda, che trasmetta chiaramente la tua attività e i prodotti/servizi che offri al tuo pubblico.",
+        "introTitle": "Non solo logo!",
+        "intro": [
+          "La mia missione è andare oltre la creazione di un semplice logo. ",
+          "Voglio aiutarti a definire l’immagine completa della tua azienda, dall’inizio alla fine, analizzando attentamente la tua vision, la tua mission e il tuo target. Insieme, svilupperemo una strategia di marketing su misura che darà vita alla tua identità aziendale, rendendola unica, riconoscibile e memorabile. ",
+          "Il branding non si limita solo alla progettazione del logo; comprende una serie di azioni specifiche e mirate, volte a comunicare e consolidare l’immagine del tuo brand all’interno del tuo mercato di riferimento. Desideriamo che il tuo marchio spicchi grazie a un’immagine coordinata, curata in ogni dettaglio, in grado di sostenere al meglio tutte le tue iniziative di marketing. ",
+          "Sono qui per farti notare e distinguerti dai competitor!"
+        ],
         "titleList": " Cosa otterrai:",
         "list": [
           "1 logo in formato vettoriale (pdf), ideale per qualsiasi comunicazione stampata e/o tipografica.",
@@ -232,11 +237,7 @@
             "width": 600,
             "height": 600
           },
-          {
-            "src": "/serviziImg/branding/brand2.jpg",
-            "width": 600,
-            "height": 600
-          },
+
           {
             "src": "/serviziImg/branding/brand3.jpg",
             "width": 600,
@@ -248,17 +249,13 @@
             "height": 600
           },
           {
-            "src": "/serviziImg/branding/brand5.jpg",
+            "src": "/serviziImg/branding/brand7.jpg",
             "width": 600,
             "height": 600
           },
+
           {
             "src": "/serviziImg/branding/brand6.jpg",
-            "width": 600,
-            "height": 600
-          },
-          {
-            "src": "/serviziImg/branding/brand7.jpg",
             "width": 600,
             "height": 600
           }
@@ -270,12 +267,12 @@
             "height": 600
           },
           {
-            "src": "/serviziImg/branding/brand9.jpg",
+            "src": "/serviziImg/branding/brand10.jpg",
             "width": 600,
             "height": 600
           },
           {
-            "src": "/serviziImg/branding/brand10.jpg",
+            "src": "/serviziImg/branding/brand14.jpg",
             "width": 600,
             "height": 600
           },
@@ -284,18 +281,9 @@
             "width": 600,
             "height": 600
           },
-          {
-            "src": "/serviziImg/branding/brand12.jpg",
-            "width": 600,
-            "height": 600
-          },
+
           {
             "src": "/serviziImg/branding/brand13.jpg",
-            "width": 600,
-            "height": 600
-          },
-          {
-            "src": "/serviziImg/branding/brand14.jpg",
             "width": 600,
             "height": 600
           }
@@ -307,7 +295,7 @@
             "height": 600
           },
           {
-            "src": "/serviziImg/branding/brand16.jpg",
+            "src": "/serviziImg/branding/brand21.jpg",
             "width": 600,
             "height": 600
           },
@@ -317,22 +305,12 @@
             "height": 600
           },
           {
-            "src": "/serviziImg/branding/brand18.jpg",
-            "width": 600,
-            "height": 600
-          },
-          {
-            "src": "/serviziImg/branding/brand19.jpg",
-            "width": 600,
-            "height": 600
-          },
-          {
             "src": "/serviziImg/branding/brand20.jpg",
             "width": 600,
             "height": 600
           },
           {
-            "src": "/serviziImg/branding/brand21.jpg",
+            "src": "/serviziImg/branding/brand16.jpg",
             "width": 600,
             "height": 600
           }
@@ -342,30 +320,146 @@
         "img": "/serviziImg/label.png",
         "name": "Label & Packaging",
         "title": "/serviziImg/label_Title.png",
-
-        "descrizione": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ",
+        "introTitle": "Packaging e Label: La Chiave del Successo del Tuo Prodotto",
+        "intro": [
+          "Spesso diamo per scontati il label e il packaging design, ma in realtà, sono dei veri e propri “ambasciatori” del nostro prodotto. ",
+          "Immagina di passeggiare per il supermercato e notare un prodotto con un packaging accattivante e un’etichetta che trasmette un senso di qualità e personalità.",
+          "Questi dettagli non solo catturano la tua attenzione ma comunicano anche il valore intrinseco del prodotto. ",
+          "E sai una cosa? Possono fare la differenza tra scegliere quel prodotto o lasciarlo lì sugli scaffali.",
+          "Oggi giorno, immersi in un mercato sempre più competitivo, il label e il packaging design diventano ancor più cruciali. Non solo catturano l’interesse del pubblico, ma contribuiscono a creare un’esperienza d’acquisto memorabile. ",
+          "Sono qui per aiutarti a scegliere il miglior contenitore per il tuo prodotto e a vestirlo con un look unico e accattivante"
+        ],
+        "titleList": " Cosa comprende:",
+        "list": [
+          "la selezione del contenitore più confacente al tuo prodotto.",
+          "l’ideazione di un’etichetta mastro sulla base delle misure del contenitore scelto (2 bozze grafiche).",
+          "il mock-up per il controllo delle misure e della resa.",
+          "la ricerca dei fornitori.",
+          "la fornitura dell’esecutivo in formato digitale e l’avvio alla stampa",
+          "a declinazione della mastro selezionata sulla base del prodotto e del formato (fino a 4 prodotti differenti)",
+          "1 esecutivo per la label mastro.",
+          "1 esecutivo per tipologia di prodotto (per un totale di 4 prodotti), la consulenza per la ricerca del contenitore e dei fornitori."
+        ],
+        "descrizione": "Il label e il packaging design sono essenziali per il successo di un prodotto, in un mercato competitivo, sono cruciali per catturare l’interesse del pubblico e informare il consumatore.",
         "link": "label",
         "gallery": [
-          { "src": "/serviziImg/LOGOS9.jpg", "width": 600, "height": 600 },
-          { "src": "/serviziImg/LOGOS24.jpg", "width": 600, "height": 600 },
-          { "src": "/serviziImg/LOGOS29.jpg", "width": 600, "height": 600 },
-          { "src": "/serviziImg/LOGOS34.jpg", "width": 600, "height": 600 },
-          { "src": "/serviziImg/LOGOS45.jpg", "width": 600, "height": 600 }
+          { "src": "/serviziImg/label/pack2.jpg", "width": 600, "height": 600 },
+          { "src": "/serviziImg/label/pack3.jpg", "width": 600, "height": 600 },
+          { "src": "/serviziImg/label/pack4.jpg", "width": 600, "height": 600 },
+          { "src": "/serviziImg/label/pack5.jpg", "width": 600, "height": 600 },
+          { "src": "/serviziImg/label/pack6.jpg", "width": 600, "height": 600 },
+          { "src": "/serviziImg/label/pack7.jpg", "width": 600, "height": 600 },
+          { "src": "/serviziImg/label/pack8.jpg", "width": 600, "height": 600 },
+          { "src": "/serviziImg/label/pack9.jpg", "width": 600, "height": 600 },
+          {
+            "src": "/serviziImg/label/pack10.jpg",
+            "width": 600,
+            "height": 600
+          },
+          { "src": "/serviziImg/label/pack.jpg", "width": 600, "height": 600 }
         ]
       },
       "social": {
         "img": "/serviziImg/social.png",
         "name": "Social Media Strategy",
         "title": "/serviziImg/social_Title.png",
+        "introTitle": "Scopri i Segreti del Successo Online: Gestione dei Social Media e Contenuti di Qualità",
+        "intro": [
+          "La gestione dei social media e la creazione di contenuti di qualità sono le chiavi per il successo online. Con noi, otterrai una presenza digitale potente ed efficace. ",
+          "Conosciamo i segreti per coinvolgere il tuo pubblico, costruire brand awareness e generare risultati concreti. Non perdere l’opportunità di sfruttare appieno il potenziale dei social media, lascia che il tuo brand brilli online! "
+        ],
+        "titleList": " Cosa comprende:",
+        "list": [
+          "definizione di una strategia in base ai tuoi obiettivi di marketing - piano editoriale",
+          "definizione di una calendario editoriale con uscite programmate ",
+          "creazione e ottimizzazione dei profili business per facebook e instagram",
+          "servizio fotografico da 50 scatti in azienda ogni bimestre",
+          "creazione di post, storie e reel per facebook e instagram ",
+          "programmazione dei contenuti targettizzati",
+          "2 post su facebook e 2 su instagram + 1 story al giorno",
+          "condivisione dei post su gruppi e canali specifici",
+          "assistenza completa",
+          "accesso come amministratore alle pagine e potrai comodamente monitorare l’andamento, la crescita e acquisire notorietà."
+        ],
 
-        "descrizione": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ",
+        "descrizione": "Risparmia tempo prezioso e ottieni risultati più consistenti affidando a me la tua presenza online. Seguo costantemente le nuove tendenze e genero contenuti efficaci e mirati che aumentano l'engagement del pubblico.",
         "link": "social",
         "gallery": [
-          { "src": "/serviziImg/LOGOS9.jpg", "width": 600, "height": 600 },
-          { "src": "/serviziImg/LOGOS24.jpg", "width": 600, "height": 600 },
-          { "src": "/serviziImg/LOGOS29.jpg", "width": 600, "height": 600 },
-          { "src": "/serviziImg/LOGOS34.jpg", "width": 600, "height": 600 },
-          { "src": "/serviziImg/LOGOS45.jpg", "width": 600, "height": 600 }
+          {
+            "src": "/serviziImg/social/socialMedia2.jpg",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/social/socialMedia3.jpg",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/social/socialMedia4.jpg",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/social/socialMedia5.jpg",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/social/socialMedia6.jpg",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/social/socialMedia7.jpg",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/social/socialMedia8.jpg",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/social/socialMedia9.jpg",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/social/socialMedia10.jpg",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/social/socialMedia11.jpg",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/social/socialMedia12.jpg",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/social/socialMedia13.jpg",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/social/socialMedia14.jpg",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/social/socialMedia15.jpg",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/social/socialMedia16.jpg",
+            "width": 600,
+            "height": 600
+          }
         ]
       },
       "campagne": {
