--- a/public/locales/it/it.json
+++ b/public/locales/it/it.json
@@ -626,7 +626,7 @@
         "name": "Illustrazione Digitale",
         "title": "/serviziImg/illustrazione_Title.png",
 
-        "descrizione": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ",
+        "descrizione": "Nel vasto oceano del branding e della comunicazione visiva, c’è una chiave segreta che spicca come una stella brillante: le illustrazioni personalizzate. Questi tesori visivi sono molto più di semplici immagini; sono la luce che esalta il tuo brand e illumina l’immagine dei tuoi prodotti.",
         "link": "illustrazione",
         "gallery": [
           { "src": "/serviziImg/LOGOS9.jpg", "width": 600, "height": 600 },
